# python-base-graphql-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  app.json  apps.json  docker-compose.semaphore.yml  docker-compose.yml  manage.py  poetry.toml  pyproject.toml  requirements.txt  setup.cfg
.semaphore/: heroku.yml  semaphore.yml
base_graphql_api/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
config/: .env.example
docker/: docker-compose.prod.yml
docker/django/: Dockerfile
graphql_core/: __init__.py  connection_fields.py  field_converter.py  fields.py  utils.py
server/: __init__.py  celery.py  schema.py  urls.py
server/apps/users/: admin.py  choices.py  exceptions.py  mixins.py  models.py  signals.py  storages.py  tasks.py  utils.py
server/core/auth/: tasks.py  utils.py
server/core/authentication/: utils.py
server/settings/: __init__.py
templates/reset_password/: reset_password_email.html  reset_password_email.txt
users/: __init__.py  admin.py  inputs.py  mixins.py  models.py  mutations.py  outputs.py  quyeries.py  relay.py  signals.py  storages.py  types.py  utils.py
users/graphql/: filters.py  inputs.py  mutation.py  mutations.py  outputs.py  query.py  quyeries.py  resolvers.py  types.py
users/jwt_auth/: apps.py  backends.py  decorators.py  exceptions.py  middleware.py  mixins.py  models.py  utils.py
users/jwt_authentication/: apps.py  backends.py  decorators.py  exceptions.py  inputs.py  middleware.py  mixins.py  models.py  mutations.py  outputs.py  utils.py
users/migrations/: 0001_initial.py  0002_useractivity.py  0003_auto_20210607_1539.py  0004_user_avatar.py  0005_auto_20210616_1718.py  0006_rename_activity_useractivity_event.py
utils/: aws_images_storage.py  email.py
(+96 files in other folders)
